--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Townscaper</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="icon" type="image/png" href="/TemplateData/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/TemplateData/favicon.svg" />
+    <link rel="shortcut icon" href="/TemplateData/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/TemplateData/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Townscaper" />
+    <link rel="manifest" href="/TemplateData/site.webmanifest" />
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
