HTML Tag for Indexing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Townscaper</title>
+    <meta name="google-site-verification" content="9fdGMMxJl1gM9JINAVb5QRk6t5GoIdcXdc5inc10O9Y" />
     <link rel="icon" type="image/png" href="/TemplateData/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/TemplateData/favicon.svg" />
     <link rel="shortcut icon" href="/TemplateData/favicon.ico" />
